[package]
name = "ark3-curve25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3.0"

[dev-dependencies]
ark-curve25519-v4 = { package = "ark-curve25519", version = "0.4.0" }
ark-ff-v4 = { package = "ark-ff", version = "0.4.2" }
